# py-sound-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/: __init__.py
src/sound_tool/: __init__.py  server.py  tool_definition.py
tests/: __init__.py  test_sound_player.py  test_sound_tool_server.py
