[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-sound-tool"
version = "0.1.0"
description = "An MCP server implementing a sound tool for Cursor and other MCP compatible IDEs"
authors = [
    {name = "Tijs Teulings", email = "tijs@automatique.nl"}
]
readme = "README.md"
requires-python = ">=3.8, <3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=1.2.0, <1.6.0",
]

[project.urls]
repository = "https://github.com/yourusername/mcp-sound-tool"

[project.scripts]
mcp-sound-tool = "sound_tool.server:main"

[tool.setuptools.package-data]
"sound_tool" = ["sounds/*.mp3", "sounds/*.wav"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
] 